[gd_scene load_steps=3 format=2]

[ext_resource path="res://ShopGUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="ResultAnnouncement" type="RichTextLabel" parent="."]
visible = false
margin_left = 312.873
margin_top = 105.411
margin_right = 693.873
margin_bottom = 249.411
text = "placeholder!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopGUI" parent="." instance=ExtResource( 1 )]
visible = false

[node name="StartRoundButton" type="Button" parent="."]
margin_left = 445.721
margin_top = 551.53
margin_right = 636.721
margin_bottom = 588.53
text = "Start Round"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartRoundButton" to="." method="_on_Button_pressed"]
